# chitcp

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  README  README.md  configure.ac
doc/: .gitignore  chitcp_project_specification.tex  figures.odg
include/chitcp/: addr.h  buffer.h  chitcpd.h  debug_api.h  log.h  multitimer.h  packet.h  socket.h  tester.h  types.h  utils.h
samples/: .gitignore  echo-client.c  echo-server.c  handshake-client.c  handshake-server.c  handshake.c  multitimer.c  simple-tester.c
src/chitcpd/: breakpoint.c  breakpoint.h  connection.c  connection.h  handlers.c  handlers.h  main.c  server.c  server.h  serverinfo.c  serverinfo.h  tcp.c  tcp.h  tcp_thread.c  tcp_thread.h
src/chitcpd-protobuf/: chitcpd.proto  protobuf-wrapper.c  protobuf-wrapper.h
src/libchitcp/: addr.c  buffer.c  daemon_api.c  daemon_api.h  debug_api.c  log.c  multitimer.c  packet.c  socket_api.c  tester.c  tester_peer.c  tester_peer.h  utils.c
tests/: .gitignore  alltests  check_chitcpd.c  check_libchitcp.c  check_libchitcp_buffer.c  check_tcp.c  check_tcp_conn_init.c  check_tcp_conn_term.c  check_tcp_data_transfer.c  check_tcp_unreliable_conn.c  chitcpd_thread.c  colorize-minimal.sh  fixtures.c  fixtures.h  grade.py  test_buffer.c  test_daemon.c  test_tcp.c  test_tcp_conn_init.c  test_tcp_conn_term.c  test_tcp_data_transfer.c  test_tcp_multitimer.c  test_tcp_persist.c  test_tcp_unreliable.c
tests/pcap/: conn_init__3way_states.pcap  conn_init__3way_vars.pcap  conn_term__client_closes_first.pcap  conn_term__server_closes_first.pcap  conn_term__simultaneous_close.pcap  data_transfer__echo_1072bytes.pcap  data_transfer__echo_10bytes.pcap  data_transfer__echo_1byte.pcap  data_transfer__echo_32768bytes.pcap  data_transfer__echo_4096bytes.pcap  data_transfer__echo_4097bytes.pcap  data_transfer__echo_535bytes.pcap  data_transfer__echo_536bytes.pcap  data_transfer__echo_537bytes.pcap  data_transfer__half_duplex_client_sends_1072bytes.pcap  data_transfer__half_duplex_client_sends_10bytes.pcap  data_transfer__half_duplex_client_sends_1byte.pcap  data_transfer__half_duplex_client_sends_32768bytes.pcap  data_transfer__half_duplex_client_sends_4096bytes.pcap  data_transfer__half_duplex_client_sends_4097bytes.pcap  data_transfer__half_duplex_client_sends_535bytes.pcap  data_transfer__half_duplex_client_sends_536bytes.pcap  data_transfer__half_duplex_client_sends_537bytes.pcap  data_transfer__half_duplex_server_sends_1072bytes.pcap  data_transfer__half_duplex_server_sends_10bytes.pcap  data_transfer__half_duplex_server_sends_1byte.pcap  data_transfer__half_duplex_server_sends_32768bytes.pcap  data_transfer__half_duplex_server_sends_4096bytes.pcap  data_transfer__half_duplex_server_sends_4097bytes.pcap  data_transfer__half_duplex_server_sends_535bytes.pcap  data_transfer__half_duplex_server_sends_536bytes.pcap  data_transfer__half_duplex_server_sends_537bytes.pcap  persist__slow_receiver_4096bytes.pcap  persist__slow_receiver_4097bytes.pcap  persist__slow_receiver_4098bytes.pcap  persist__slow_receiver_4632bytes.pcap  persist__slow_receiver_8192bytes.pcap  persist__slow_receiver_8728bytes.pcap  rtt_estimation__rtt_0_75s.pcap  rtt_estimation__rtt_1_5s.pcap  (+23 more)
wireshark_dissector/: chitcp.lua
